[gd_scene load_steps=10 format=2]

[ext_resource path="res://App/Interface/Track/TrackView.gd" type="Script" id=1]
[ext_resource path="res://App/Interface/IconButton/IconButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://App/Interface/Loading/Loading.tscn" type="PackedScene" id=4]
[ext_resource path="res://App/Icons/generic_remove.svg" type="Texture" id=5]
[ext_resource path="res://App/Interface/Scroller/Scroller.tscn" type="PackedScene" id=6]
[ext_resource path="res://App/Icons/generic_add.svg" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=26]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0, 0, 0, 0 )
border_width_bottom = 1
border_color = Color( 0.247059, 0.247059, 0.247059, 1 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="Theme" id=12]
HScrollBar/styles/scroll = SubResource( 11 )

[node name="TrackView" type="PanelContainer"]
anchor_right = 1.0
margin_bottom = 50.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_styles/panel = SubResource( 26 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 1272.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 1188.0
margin_bottom = 34.0
mouse_filter = 2
size_flags_horizontal = 3
theme = SubResource( 12 )
custom_constants/separation = 0
alignment = 1

[node name="Main" type="HBoxContainer" parent="HBoxContainer/Info"]
margin_top = 3.0
margin_right = 1188.0
margin_bottom = 17.0
custom_constants/separation = 0

[node name="Loading" parent="HBoxContainer/Info/Main" instance=ExtResource( 4 )]
margin_right = 0.0
margin_bottom = 14.0

[node name="Title" parent="HBoxContainer/Info/Main" instance=ExtResource( 6 )]
margin_right = 1188.0
size_flags_horizontal = 3

[node name="Meta" parent="HBoxContainer/Info" instance=ExtResource( 6 )]
modulate = Color( 1, 1, 1, 0.74902 )
margin_top = 17.0
margin_right = 1188.0
margin_bottom = 31.0
text = "Loading..."

[node name="AddToQueue" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_left = 1192.0
margin_right = 1226.0
margin_bottom = 34.0
rect_min_size = Vector2( 34, 0 )
focus_mode = 2
texture = ExtResource( 7 )
hint = "Add to queue"

[node name="Remove" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_left = 1230.0
margin_right = 1264.0
margin_bottom = 34.0
rect_min_size = Vector2( 34, 0 )
texture = ExtResource( 5 )
hint = "TRACK_REMOVE"

[connection signal="gui_input" from="." to="." method="_on_TrackView_gui_input"]
[connection signal="pressed" from="HBoxContainer/AddToQueue" to="." method="add"]
[connection signal="pressed" from="HBoxContainer/Remove" to="." method="_on_Remove_pressed"]
